--- a/html/all-booking.html
+++ b/html/all-booking.html
@@ -353,7 +353,7 @@
                                                                     <h5 class="mb-0 pb-0">12:30 pm</h5>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-4">
+                                                            <div class="col-lg-4 mt-lg-0 mt-3">
                                                                 <h4>Vehical Information</h4>
                                                                 <div class="d-flex align-items-center mb-1">
                                                                     <span class="vehical-label"
@@ -376,7 +376,7 @@
                                                                     <p class="mb-0 pb-0 ms-2">Lorem, ipsum dolor.</p>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-3">
+                                                            <div class="col-lg-3 mt-lg-0 mt-3">
                                                                 <h4>Services</h4>
                                                                 <div class="d-flex align-items-center">
                                                                     <span class="vehical-label"
@@ -410,7 +410,7 @@
                                                                     <p class="mb-0 pb-0 ms-2">Tire Charge over</p>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-2 ">
+                                                            <div class="col-lg-2 mt-lg-0 mt-3 ">
                                                                 <h4>Actions</h4>
                                                                 <div class=" ">
                                                                     <button
@@ -451,7 +451,7 @@
                                                                     <h5 class="mb-0 pb-0">12:30 pm</h5>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-4">
+                                                            <div class="col-lg-4 mt-lg-0 mt-3">
                                                                 <h4>Vehical Information</h4>
                                                                 <div class="d-flex align-items-center mb-1">
                                                                     <span class="vehical-label"
@@ -474,7 +474,7 @@
                                                                     <p class="mb-0 pb-0 ms-2">Lorem, ipsum dolor.</p>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-3">
+                                                            <div class="col-lg-3 mt-lg-0 mt-3">
                                                                 <h4>Services</h4>
                                                                 <div class="d-flex align-items-center">
                                                                     <span class="vehical-label"
@@ -508,7 +508,7 @@
                                                                     <p class="mb-0 pb-0 ms-2">Tire Charge over</p>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-2 ">
+                                                            <div class="col-lg-2 mt-lg-0 mt-3 ">
                                                                 <h4>Actions</h4>
                                                                 <div class=" ">
                                                                     <button
@@ -548,7 +548,7 @@
                                                                     <h5 class="mb-0 pb-0">12:30 pm</h5>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-4">
+                                                            <div class="col-lg-4 mt-lg-0 mt-3">
                                                                 <h4>Vehical Information</h4>
                                                                 <div class="d-flex align-items-center mb-1">
                                                                     <span class="vehical-label"
@@ -571,7 +571,7 @@
                                                                     <p class="mb-0 pb-0 ms-2">Lorem, ipsum dolor.</p>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-3">
+                                                            <div class="col-lg-3 mt-lg-0 mt-3">
                                                                 <h4>Services</h4>
                                                                 <div class="d-flex align-items-center">
                                                                     <span class="vehical-label"
@@ -605,7 +605,7 @@
                                                                     <p class="mb-0 pb-0 ms-2">Tire Charge over</p>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-2 ">
+                                                            <div class="col-lg-2 mt-lg-0 mt-3 ">
                                                                 <h4>Actions</h4>
                                                                 <div class=" ">
                                                                     <button
@@ -646,7 +646,7 @@
                                                                     <h5 class="mb-0 pb-0">12:30 pm</h5>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-4">
+                                                            <div class="col-lg-4 mt-lg-0 mt-3">
                                                                 <h4>Vehical Information</h4>
                                                                 <div class="d-flex align-items-center mb-1">
                                                                     <span class="vehical-label"
@@ -669,7 +669,7 @@
                                                                     <p class="mb-0 pb-0 ms-2">Lorem, ipsum dolor.</p>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-3">
+                                                            <div class="col-lg-3 mt-lg-0 mt-3">
                                                                 <h4>Services</h4>
                                                                 <div class="d-flex align-items-center">
                                                                     <span class="vehical-label"
@@ -703,7 +703,7 @@
                                                                     <p class="mb-0 pb-0 ms-2">Tire Charge over</p>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-2 ">
+                                                            <div class="col-lg-2 mt-lg-0 mt-3 ">
                                                                 <h4>Actions</h4>
                                                                 <div class=" ">
                                                                     <button
@@ -769,7 +769,7 @@
                                                                     <h5 class="mb-0 pb-0">12:30 pm</h5>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-4">
+                                                            <div class="col-lg-4 mt-lg-0 mt-3">
                                                                 <h4>Vehical Information</h4>
                                                                 <div class="d-flex align-items-center mb-1">
                                                                     <span class="vehical-label"
@@ -792,7 +792,7 @@
                                                                     <p class="mb-0 pb-0 ms-2">Lorem, ipsum dolor.</p>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-3">
+                                                            <div class="col-lg-3 mt-lg-0 mt-3">
                                                                 <h4>Services</h4>
                                                                 <div class="d-flex align-items-center">
                                                                     <span class="vehical-label"
@@ -826,7 +826,7 @@
                                                                     <p class="mb-0 pb-0 ms-2">Tire Charge over</p>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-2 ">
+                                                            <div class="col-lg-2 mt-lg-0 mt-3 ">
                                                                 <h4>Actions</h4>
                                                                 <div class=" ">
                                                                     <button
@@ -867,7 +867,7 @@
                                                                     <h5 class="mb-0 pb-0">12:30 pm</h5>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-4">
+                                                            <div class="col-lg-4 mt-lg-0 mt-3">
                                                                 <h4>Vehical Information</h4>
                                                                 <div class="d-flex align-items-center mb-1">
                                                                     <span class="vehical-label"
@@ -890,7 +890,7 @@
                                                                     <p class="mb-0 pb-0 ms-2">Lorem, ipsum dolor.</p>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-3">
+                                                            <div class="col-lg-3 mt-lg-0 mt-3">
                                                                 <h4>Services</h4>
                                                                 <div class="d-flex align-items-center">
                                                                     <span class="vehical-label"
@@ -924,7 +924,7 @@
                                                                     <p class="mb-0 pb-0 ms-2">Tire Charge over</p>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-2 ">
+                                                            <div class="col-lg-2 mt-lg-0 mt-3 ">
                                                                 <h4>Actions</h4>
                                                                 <div class=" ">
                                                                     <button
@@ -964,7 +964,7 @@
                                                                     <h5 class="mb-0 pb-0">12:30 pm</h5>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-4">
+                                                            <div class="col-lg-4 mt-lg-0 mt-3">
                                                                 <h4>Vehical Information</h4>
                                                                 <div class="d-flex align-items-center mb-1">
                                                                     <span class="vehical-label"
@@ -987,7 +987,7 @@
                                                                     <p class="mb-0 pb-0 ms-2">Lorem, ipsum dolor.</p>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-3">
+                                                            <div class="col-lg-3 mt-lg-0 mt-3">
                                                                 <h4>Services</h4>
                                                                 <div class="d-flex align-items-center">
                                                                     <span class="vehical-label"
@@ -1021,7 +1021,7 @@
                                                                     <p class="mb-0 pb-0 ms-2">Tire Charge over</p>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-2 ">
+                                                            <div class="col-lg-2 mt-lg-0 mt-3 ">
                                                                 <h4>Actions</h4>
                                                                 <div class=" ">
                                                                     <button
@@ -1090,7 +1090,7 @@
                                                                     <h5 class="mb-0 pb-0">12:30 pm</h5>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-4">
+                                                            <div class="col-lg-4 mt-lg-0 mt-3">
                                                                 <h4>Vehical Information</h4>
                                                                 <div class="d-flex align-items-center mb-1">
                                                                     <span class="vehical-label"
@@ -1113,7 +1113,7 @@
                                                                     <p class="mb-0 pb-0 ms-2">Lorem, ipsum dolor.</p>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-3">
+                                                            <div class="col-lg-3 mt-lg-0 mt-3">
                                                                 <h4>Services</h4>
                                                                 <div class="d-flex align-items-center">
                                                                     <span class="vehical-label"
@@ -1147,7 +1147,7 @@
                                                                     <p class="mb-0 pb-0 ms-2">Tire Charge over</p>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-2 ">
+                                                            <div class="col-lg-2 mt-lg-0 mt-3 ">
                                                                 <h4>Actions</h4>
                                                                 <div class=" ">
                                                                     <button
