--- a/html/assign_counselor.html
+++ b/html/assign_counselor.html
@@ -82,6 +82,47 @@
                                 </a>
                             </li>
 
+                            <li class="menu-item ">
+                                <a href="listing_counselor.html" class="menu-link">
+                                    <div data-i18n="Text Divider">Counselor</div>
+                                </a>
+                            </li>
+                            <li class="menu-item ">
+                                <a href="listing_country.html" class="menu-link">
+                                    <div data-i18n="Text Divider">Country</div>
+                                </a>
+                            </li>
+                            <li class="menu-item ">
+                                <a href="listing_currency.html" class="menu-link">
+                                    <div data-i18n="Text Divider">Currency</div>
+                                </a>
+                            </li>
+                            <li class="menu-item ">
+                                <a href="listing_agent.html" class="menu-link">
+                                    <div data-i18n="Text Divider">Agent</div>
+                                </a>
+                            </li>
+                            <li class="menu-item ">
+                                <a href="listing_ref.html" class="menu-link">
+                                    <div data-i18n="Text Divider">Reference</div>
+                                </a>
+                            </li>
+                            <li class="menu-item ">
+                                <a href="listing_session.html" class="menu-link">
+                                    <div data-i18n="Text Divider">Session</div>
+                                </a>
+                            </li>
+                            <li class="menu-item ">
+                                <a href="listing_subagent.html" class="menu-link">
+                                    <div data-i18n="Text Divider">Sub Agent</div>
+                                </a>
+                            </li>
+                            <li class="menu-item ">
+                                <a href="listing_university.html" class="menu-link">
+                                    <div data-i18n="Text Divider">University</div>
+                                </a>
+                            </li>
+
                         </ul>
                     </li>
 
@@ -237,7 +278,7 @@
 
                             <!-- Striped Rows -->
                             <div class="card  pb-4 px-lg-4 px-2">
-                                <h5 class="card-header px-0 bg-white border-bottom-0  py-3 mb-2">Assign Counselor</h5>
+                                <h5 class="card-header px-0 bg-white border-bottom-0  py-3 mb-2 ">Assign Counselor</h5>
                                 <div class="row filter-div">
                                     <div class="col-md-5 ms-auto">
                                         <div class="d-flex align-items-center flex-md-row flex-column ">
