--- a/html/user-access.html
+++ b/html/user-access.html
@@ -82,6 +82,47 @@
                                 </a>
                             </li>
 
+                            <li class="menu-item ">
+                                <a href="listing_counselor.html" class="menu-link">
+                                    <div data-i18n="Text Divider">Counselor</div>
+                                </a>
+                            </li>
+                            <li class="menu-item ">
+                                <a href="listing_country.html" class="menu-link">
+                                    <div data-i18n="Text Divider">Country</div>
+                                </a>
+                            </li>
+                            <li class="menu-item ">
+                                <a href="listing_currency.html" class="menu-link">
+                                    <div data-i18n="Text Divider">Currency</div>
+                                </a>
+                            </li>
+                            <li class="menu-item ">
+                                <a href="listing_agent.html" class="menu-link">
+                                    <div data-i18n="Text Divider">Agent</div>
+                                </a>
+                            </li>
+                            <li class="menu-item ">
+                                <a href="listing_ref.html" class="menu-link">
+                                    <div data-i18n="Text Divider">Reference</div>
+                                </a>
+                            </li>
+                            <li class="menu-item ">
+                                <a href="listing_session.html" class="menu-link">
+                                    <div data-i18n="Text Divider">Session</div>
+                                </a>
+                            </li>
+                            <li class="menu-item ">
+                                <a href="listing_subagent.html" class="menu-link">
+                                    <div data-i18n="Text Divider">Sub Agent</div>
+                                </a>
+                            </li>
+                            <li class="menu-item ">
+                                <a href="listing_university.html" class="menu-link">
+                                    <div data-i18n="Text Divider">University</div>
+                                </a>
+                            </li>
+
                         </ul>
                     </li>
 
@@ -249,7 +290,7 @@
                         <!-- <h4 class=" pb-2">User Register</h4> -->
 
                         <div class="card  pb-4 px-lg-4 px-2">
-                            <h5 class="card-header px-0 bg-white border-bottom-0  py-3 mb-2">Users Access Role</h5>
+                            <h5 class="card-header px-0 bg-white border-bottom-0  py-3 mb-2 ">Users Access Role</h5>
 
                             <table id="assign" class="table  nowrap border-0 " style="width:100%">
                                 <thead>
