--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -45,7 +45,6 @@
     <div class="layout-wrapper layout-content-navbar">
         <div class="layout-container">
             <!-- Menu -->
-
             <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
                 <div class="app-brand demo">
                     <a href="index.html" class="">
@@ -180,7 +179,6 @@
             <!-- Layout container -->
             <div class="layout-page">
                 <!-- Navbar -->
-
                 <nav class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme"
                     id="layout-navbar">
                     <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
@@ -465,7 +463,15 @@
 
                         <div id="Appointments" class="tabcontent">
                             <div class="card  pb-4 px-lg-4 px-2">
-                                <h5 class="card-header px-0 bg-white border-bottom-0  py-3 mb-2">Today Appointments</h5>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <h5 class="card-header px-0 bg-white border-bottom-0  py-3 mb-2">Today Appointments</h5>
+
+                                    <div class="d-flex align-items-center">
+                                         <button class="btn btn-primary btn-xs">Waist On</button>
+                                         <button class="btn btn-primary btn-xs ms-2">Transfer to Data</button>
+                                    </div>
+                                </div>
+                               
                                 <div class="table-responsive">
                                     <table id="inquiry" class="table  nowrap border-0 " style="width:100%">
                                         <thead>
