--- a/html/listing_counselor.html
+++ b/html/listing_counselor.html
@@ -78,7 +78,11 @@
                             <div data-i18n="Text Divider">Student Management</div>
                         </a>
                     </li>
-
+                    <li class="menu-item ">
+                      <a href="booking.html" class="menu-link">
+                          <div data-i18n="Text Divider">Registration Form</div>
+                      </a>
+                  </li>
                     <li class="menu-item active">
                         <a href="listing_counselor.html" class="menu-link">
                             <div data-i18n="Text Divider">Counselor</div>
