--- a/html/sale-invoice.html
+++ b/html/sale-invoice.html
@@ -70,6 +70,11 @@
                                     <div data-i18n="Text Divider">Student Management</div>
                                 </a>
                             </li>
+                            <li class="menu-item ">
+                              <a href="booking.html" class="menu-link">
+                                  <div data-i18n="Text Divider">Registration Form</div>
+                              </a>
+                          </li>
 
                             <li class="menu-item ">
                                 <a href="listing_counselor.html" class="menu-link">
