--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -471,7 +471,7 @@
                                 <div class="d-flex justify-content-between align-items-center">
                                     <h5 class="card-header px-0 bg-white border-bottom-0  py-3 mb-2">Today Appointments</h5>
                                     <div class="d-flex align-items-center">
-                                         <button class="btn btn-primary btn-xs">Waist On</button>
+                                         <button class="btn btn-primary btn-xs">Waste On</button>
                                          <button class="btn btn-primary btn-xs ms-2">Transfer to Data</button>
                                     </div>
                                 </div>
