--- a/html/assign_counselor.html
+++ b/html/assign_counselor.html
@@ -83,7 +83,7 @@
                             </li>
                             <li class="menu-item ">
                               <a href="booking.html" class="menu-link">
-                                  <div data-i18n="Text Divider">Registration Form</div>
+                                  <div data-i18n="Text Divider">Booking Management</div>
                               </a>
                           </li>
 
@@ -283,7 +283,7 @@
 
                             <!-- Striped Rows -->
                             <div class="card  pb-4 px-lg-4 px-2">
-                                <h5 class="card-header px-0 bg-white border-bottom-0  py-3 mb-2 ">Assign Counselor</h5>
+                                <h5 class="card-header px-0 bg-white border-bottom-0  py-3  ">Assign Counselor</h5>
                                 <div class="row filter-div">
                                     <div class="col-md-5 ms-auto">
                                         <div class="d-flex align-items-center flex-md-row flex-column ">
@@ -302,7 +302,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="table-responsive mt-n">
+                                <div class="table-responsive mt-3">
                                     <table id="assign-C" class="table  nowrap border-0 " style="width:100%">
                                         <thead>
                                             <tr class="dt-head">
