--- a/html/booking.html
+++ b/html/booking.html
@@ -88,7 +88,7 @@
                            
                             <li class="menu-item active">
                                 <a href="booking.html" class="menu-link">
-                                    <div data-i18n="Text Divider">Registration Form</div>
+                                    <div data-i18n="Text Divider">Booking Management</div>
                                 </a>
                             </li>
                             <li class="menu-item ">
