--- a/html/student-management.html
+++ b/html/student-management.html
@@ -76,7 +76,7 @@
                             </li>
                             <li class="menu-item ">
                                 <a href="booking.html" class="menu-link">
-                                    <div data-i18n="Text Divider">Registration Form</div>
+                                    <div data-i18n="Text Divider">Booking Management</div>
                                 </a>
                             </li>
 
