--- a/html/listing_agent.html
+++ b/html/listing_agent.html
@@ -80,7 +80,7 @@
                             </li>
                             <li class="menu-item ">
                               <a href="booking.html" class="menu-link">
-                                  <div data-i18n="Text Divider">Registration Form</div>
+                                  <div data-i18n="Text Divider">Booking Management</div>
                               </a>
                           </li>
 
