--- a/html/student-invoice.html
+++ b/html/student-invoice.html
@@ -82,7 +82,7 @@
                             </li>
                             <li class="menu-item ">
                               <a href="booking.html" class="menu-link">
-                                  <div data-i18n="Text Divider">Registration Form</div>
+                                  <div data-i18n="Text Divider">Booking Management</div>
                               </a>
                           </li>
 
