--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -255,9 +255,9 @@
 
                         <div class="tab mb-3">
                             <div class="tab-scroll">
-                                <button class="tablinks" data-tab="SD" >Student
+                                <button class="tablinks" data-tab="SD" id="defaultOpen">Student
                                     Data</button>
-                                <button class="tablinks" data-tab="Appointments" id="defaultOpen">Appointments</button>
+                                <button class="tablinks" data-tab="Appointments" >Appointments</button>
                             </div>
 
                         </div>
